--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "vite": "^3.2.1",
     "sass": "^1.55.0",
-    "typescript": "^4.6.4"
+    "tailwindcss": "^3.2.1",
+    "typescript": "^4.6.4",
+    "vite": "^3.2.1"
   }
 }
