--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://tenatica-ui.vercel.app/",
   "scripts": {
     "dev": "vite --port 3000",
     "prebuild": "rimraf dist",
+    "postbuild": "cp dist/index.html dist/200.html",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --fix --config ./.eslintrc.cjs .",
