--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "format": "prettier --write --config ./.prettierrc ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "axios": "^1.1.3",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
