--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^2.9.10",
     "axios": "^1.1.3",
     "firebase": "^9.13.0",
+    "luxon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
@@ -24,6 +25,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/luxon": "^3.1.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
